# genai-fundamentos

./: .gitignore  README.md  pyproject.toml  requirements.txt
01-fundamentos/: 01-genai-que-es-ia-generativa.ipynb  02-genai-que-puede-hacer.ipynb  03-genai-historia-y-evolucion.ipynb  04-genai-llm-arquitectura-alto-nivel.ipynb  05-genai-llm-limitaciones-y-alucinaciones.ipynb  06-genai-roles-disciplinas-profesionales.ipynb
02-iniciacion/: 01-genai-setup-entorno-python-ollama-langchain.ipynb  02-genai-langchain-modelos-ollama.ipynb  03-genai-langchain-message-types.ipynb  04-genai-langchain-generation-parameters.ipynb
03-proveedores/: 01-genai-ecosistema-proveedores.ipynb  02-genai-langchain-openai.ipynb  03-genai-langchain-anthropic.ipynb  04-genai-langchain-google.ipynb
04-proyecto/: AGENTS.md  main.py
