[project]
name = "genai-fundamentos"
version = "0.1.0"
description = "Fundamentos de IA Generativa para devs"
readme = "README.md"
requires-python = ">=3.13.5"
license = "MIT"
authors = [
    { name = "Alan Sastre" }
]
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.6",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
]
